--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,9 @@
 {
     "version": 2,
     "framework": null,
+    "build": {
+        "command": "./vercel-build.sh && vercel build"
+    },
     "functions": {
         "api/index.php": { "runtime": "vercel-php@0.4.1" }
     },
