--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
         "api/index.php": { "runtime": "vercel-php@0.6.0" }
     },
     "routes": [
-        { "src": "/(.*)", "dest": "/api/index.php" }
+        { "src": "/(.*)", "dest": "/public/index.php" }
     ],
     "public": true,
     "outputDirectory": "public",
